Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.7 ----------

[all] Filter bugfix: Do not exclude surrogate pairs

[w2l] Bugfix: Fixed indentation problem with lists after tables if formatting>=convert_most

[w2l] Bugfix: Lists in tables are now exported as standard lists even if formatting>=convert_most

[w2l] Bugfix: Corrected export of centered and right justified paragraphs in tables

[w2x] Renamed the option original_image_size to image_size with extended values: absolute (default, former false),
  relative (new value: Export images and text boxes using relative width, i.e. as a percentage of the current text width)
  and none/original_image_size (former true). The old option name is still recognized.

[w4l] Check that the document is saved locally (file) and (on Windows) with a drive letter - otherwise LaTeX cannot run

[w4l] Delete .aux file before TeXifying (this avoids errors in some cases)

[w2x] Changed Dublin Core profile name to match current specification

[w2l] Polyglossia bugfix: Now sets the default language correctly

[w2l] Babel bugfix: No language is now ignored rather than exported as English 

[w2x] Bugfix: No language is now exported as zxx rather than zxx-none

[w2l] Added support for unnumbered headings

[w2x] Bugfix: Unnumbered headings are now exported correctly

[w2x] Bugfix: Do not add space to empty labels (e.g. heading numbering)

[w2x] Export line breaks as spaces in annotations and EPUB table of content

[w2x] Bugfix: Do not export cell widths for tables with relative width

[w2x] Export suffix and prefix on footnotes and endnotes

[w2x] Export footnotes as endnotes (if text:footnotes-position="document"). A new option footnotes_heading is added:
  The value of this (if non-empty) is used as heading for the footnotes in this case

[w2x] Export footnote rule (using first master page)

[w2x] Export page background color (using first master page)
